🍎 Safari stretching fix

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -12,6 +12,8 @@ body {
 
 .flex {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start; /* fix for Safaru stretching */
 }
 
 .f-center {
